Fix overflow-y -> overflow-x in shared classes overflowX*

--- a/frontend/src/shared.scss
+++ b/frontend/src/shared.scss
@@ -139,10 +139,10 @@ form {
     overflow-y: auto;
   }
   &.overflowXScroll {
-    overflow-y: scroll;
+    overflow-x: scroll;
   }
   &.overflowXVisible {
-    overflow-y: visible;
+    overflow-x: visible;
   }
 }
 
@@ -162,10 +162,10 @@ form {
     overflow-y: visible;
   }
   &.overflowXScroll {
-    overflow-y: scroll;
+    overflow-x: scroll;
   }
   &.overflowXVisible {
-    overflow-y: visible;
+    overflow-x: visible;
   }
   &.roadmapPageContainer {
     padding: 0 23px 0 20px;
